# DeeCamp-2018-RobotArm

./: README.md  orgnization_and_target_manual.md
Code-Python/: ArmSwift.py  Build_uArm.py  CalibrationParameter.py  Contour.py  Kinematics.py  Main.py  Planning.py  Structure.py  Visualization.py
Common/Virtual-uArm/Code-Python/: Build_uArm.py  Visualization.py
Group0/: CMakeLists.txt  ParamTypes.h  README.md  main.cpp  pressure_test_move.py  python_vision.py  ransac_geometry.cpp  ransac_geometry.h
Group2/: README.md
Group2/Vision/: main.py  opencv.py  realsense.py  yolo3.py
Group2/Vision/RANSAC-C++/: CMakeLists.txt  ransac_plane.cpp
Group2/Vision/YOLO3-4-Py/weights/: imgui.ini
Group2/Vision/lib/: CMakeLists.txt
Group2/objectDetection/: CMakeLists.txt  README.md
Group2/objectDetection/sample/: blueCube.txt  greenCube.txt  pinkCylinder.txt  redCylinder.txt  yellowCube.txt
Group2/objectDetection/source/: objectDetection.cpp
Resources/: README.md
Resources/Virtual-uArm/: README.md
Resources/Virtual-uArm/Code-Python/: Structure.py
Tutorial/: python_C_mix_programming.md  realsense_guide.md
doc/: GitHub&Virtual_uArm_Introduction_By_Jingyu.pptx
